<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="enviar">Enviar</string>
    <string name="aprobacion">Se envían los datos</string>
    <string name="error">Debes llenar todos los campos</string>
    <string name="requerido">Requerido</string>
    <string name="error1">Fecha inválida</string>
    <string name="aries">Aries</string>
    <string name="tauro">Tauro</string>
    <string name="geminis">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpio">Escorpio</string>
    <string name="sagitario">Sagitario</string>
    <string name="capricornio">Capricornio</string>
    <string name="acuario">Acuario</string>
    <string name="piscis">Piscis</string>
    <string name="rata">Rata</string>
    <string name="buey">Buey</string>
    <string name="tigre">Tigre</string>
    <string name="conejo">Conejo</string>
    <string name="dragon">Dragón</string>
    <string name="serpiente">Serpiente</string>
    <string name="caballo">Caballo</string>
    <string name="oveja">Caballo</string>
    <string name="mono">Mono</string>
    <string name="gallo">Gallo</string>
    <string name="perro">Perro</string>
    <string name="cerdo">Cerdo</string>
    <string name="inicio">"Bienvenido "</string>
    <string name="rfc">"Tu RFC es: "</string>
    <string name="edad">"Tu edad es de: "</string>
    <string name="signoChino">Tu signo chino es:</string>
    <string name="signoZodiacal">Tu signo zodiacal es:</string>
    <string name="regresar">Regresar</string>
    <string name="descripcionSZ">Es la imagen de tu signo zodiacal</string>
    <string name="descripcionSC">Es la imagen de tu signo chino</string>
    <string name="nada">Nada</string>
    <string name="url">https://www.google.com/search?client=firefox-b-d</string>
</resources>
